# feishu_eat_bot

./: .gitignore  LICENSE  pyproject.toml
code/: bot.py  main.py  message.py  utils.py
data/: what2eat_example.json
